# Kefir-AI

./: .gitignore  README.md  example-env.ts  index.html  package-lock.json  package.json
Ui design on stitch/stitch_project_atlas_knowledge_os/home_dashboard_collapsed_nav/: code.html
Ui design on stitch/stitch_project_atlas_knowledge_os/knowledge_all_notes_library/: code.html
Ui design on stitch/stitch_project_atlas_knowledge_os/meeting_summary_collapsed_nav/: code.html
Ui design on stitch/stitch_project_atlas_knowledge_os/meeting_workspace_enhanced_notepad/: code.html
Ui design on stitch/stitch_project_atlas_knowledge_os/notepad_start_window/: code.html
Ui design on stitch/stitch_project_atlas_knowledge_os/post_meeting_report_ai_q_a/: code.html
Ui design on stitch/stitch_project_atlas_knowledge_os/precision_enterprise_intelligence/: DESIGN.md
Ui design on stitch/stitch_project_atlas_knowledge_os/project_workspace_collapsed_nav/: code.html
Ui design on stitch/stitch_project_atlas_knowledge_os/settings_connectors/: code.html
Ui design on stitch/stitch_project_atlas_knowledge_os/settings_notifications/: code.html
scripts/: generate-icons.ps1
sidecar/: requirements.txt  transcribe.py
src/: App.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: audio.rs  lib.rs  main.rs  streaming.rs
src/components/: Dashboard.tsx  MeetingView.tsx  NotePad.tsx  RecordingPanel.tsx  SettingsModal.tsx  SettingsPage.tsx  Sidebar.tsx  SummaryPanel.tsx  TranscriptPanel.tsx
src/styles/: index.css
(+2 files in other folders)
