[package]
name = "kefir"
version = "0.1.0"
description = "Kefir — Local AI Meeting Notetaker"
authors = []
edition = "2021"

[lib]
name = "kefir_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri        = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde        = { version = "1", features = ["derive"] }
serde_json   = "1"
tokio        = { version = "1", features = ["full"] }
cpal         = "0.15"
hound        = "3"
anyhow       = "1"
reqwest      = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
uuid         = { version = "1", features = ["v4"] }
chrono       = "0.4"
once_cell    = "1"
tempfile     = "3"
# Real-time streaming transcription (Deepgram / AssemblyAI)
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
futures-util = "0.3"

# Windows-specific: raw WASAPI loopback
[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
  "Win32_Foundation",
  "Win32_System_Com",
  "Win32_Media_Audio",
] }

[profile.release]
panic         = "abort"
codegen-units = 1
lto           = true
opt-level     = "s"
strip         = true
